create localized version

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col-sm-12 col-md-6 order-1 order-md-2">
             <img
               class="img-fluid d-none d-sm-block"
-              src="\assets\img\jumbo.jpeg"
+              src="\assets\img\jumbo.png"
               alt=""
             />
           </div>
@@ -173,7 +173,7 @@
         <div class="col-md-6 px-md-4" id="payment">
           <a href="#">
             <img
-              src="\assets\img\payments.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInRight animate__slower slide"
             />
@@ -185,7 +185,7 @@
         <div class="col-md-6 px-md-4" id="app-landing">
           <a href="#">
             <img
-              src="\assets\img\index.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInLeft animate__slower slide"
             />
@@ -195,7 +195,7 @@
         <div class="col-md-6 px-md-4" id="portfolio">
           <a href="#">
             <img
-              src="\assets\img\personal.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInRight animate__slower slide"
             />
@@ -207,7 +207,7 @@
         <div class="col-md-6 px-md-4" id="marketing">
           <a href="#">
             <img
-              src="\assets\img\fitness.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInLeft animate__slower slide"
             />
@@ -217,7 +217,7 @@
         <div class="col-md-6 px-md-4" id="fitness">
           <a href="#">
             <img
-              src="\assets\img\marketing.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInRight animate__slower slide"
             />
@@ -229,7 +229,7 @@
         <div class="col-md-6 px-md-4" id="pharmacy">
           <a href="#">
             <img
-              src="\assets\img\pharmacy.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInLeft animate__slower slide"
             />
@@ -239,7 +239,7 @@
         <div class="col-md-6 px-md-4">
           <a href="#">
             <img
-              src="\assets\img\photography.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInRight animate__slower slide"
             />
@@ -251,7 +251,7 @@
         <div class="col-md-6 px-md-4" id="photo">
           <a href="#">
             <img
-              src="\assets\img\hosting.png"
+              src="\assets\img\portfolio.png"
               alt=""
               class="img-fluid animate__animated wow animate__fadeInLeft animate__slower slide"
             />
@@ -277,7 +277,7 @@
           </div>
           <img
             class="img-fluid active-img-area"
-            src="\assets\img\marketing.png"
+            src="\assets\img\portfolio.png"
             alt=""
           />
         </div>
@@ -288,7 +288,7 @@
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0">
           <a href="#">
-            <img src="\assets\img\product.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -296,18 +296,18 @@
         <div class="col-md-4 col-sm-6 mx-0 px-0 d-none d-md-block">
           <img
             class="img-fluid active-img-area"
-            src="\assets\img\pharmacy.png"
+            src="\assets\img\portfolio.png"
             alt=""
           />
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0">
           <a href="#">
-            <img src="\assets\img\photography.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0">
           <a href="#">
-            <img src="\assets\img\hosting.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -334,7 +334,7 @@
         </div>
         <div class="col-md-6">
           <a href="">
-            <img src="\assets\img\login.png" alt="" class="img-fluid" />
+            <img src="\assets\img\signup.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -353,25 +353,21 @@
             <button class="btn px-3">VIEW</button>
           </div>
           <img
-            src="\assets\img\cart.png"
+            src="\assets\img\products.png"
             alt=""
             class="img-fluid active-img-area"
           />
         </div>
         <div class="col-md-6">
           <a href="">
-            <img
-              src="\assets\img\single-product.png"
-              alt=""
-              class="img-fluid"
-            />
+            <img src="\assets\img\products.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <a href="">
-            <img src="\assets\img\products.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -391,7 +387,7 @@
           </div>
           <img
             class="img-fluid active-img-area"
-            src="\assets\img\course.png"
+            src="\assets\img\portfolio.png"
             alt=""
           />
         </div>
@@ -402,7 +398,7 @@
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-3 order-md-3">
           <a href="#">
-            <img src="\assets\img\hosting.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -410,18 +406,18 @@
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-2 order-md-4">
           <img
             class="img-fluid active-img-area"
-            src="\assets\img\photography.png"
+            src="\assets\img\portfolio.png"
             alt=""
           />
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 d-none d-md-block order-md-5">
           <a href="#">
-            <img src="\assets\img\marketing.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-1 order-md-6">
           <a href="#">
-            <img src="\assets\img\product.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -447,12 +443,12 @@
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-1 order-md-2">
           <a href="#">
-            <img src="\assets\img\course.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-2 order-md-3">
           <a href="#">
-            <img src="\assets\img\hosting.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -460,18 +456,18 @@
         <div class="col-md-4 col-sm-6 mx-0 px-0 order-3 order-md-4">
           <img
             class="img-fluid active-img-area"
-            src="\assets\img\product.png"
+            src="\assets\img\portfolio.png"
             alt=""
           />
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 d-none d-sm-block order-md-5">
           <a href="#">
-            <img src="\assets\img\marketing.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mx-0 px-0 d-none d-md-block order-md-6">
           <a href="#">
-            <img src="\assets\img\photography.png" alt="" class="img-fluid" />
+            <img src="\assets\img\portfolio.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -490,26 +486,26 @@
             <button class="btn px-3">VIEW</button>
           </div>
           <img
-            src="\assets\img\contact-details.png"
+            src="\assets\img\contact.png"
             alt=""
             class="img-fluid active-img-area"
           />
         </div>
         <div class="col-md-6">
           <a href="">
-            <img src="\assets\img\contact-three.png" alt="" class="img-fluid" />
+            <img src="\assets\img\contact.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 d-none d-md-block">
           <a href="">
-            <img src="\assets\img\contact-two.png" alt="" class="img-fluid" />
+            <img src="\assets\img\contact.png" alt="" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-6">
           <a href="">
-            <img src="\assets\img\contact-one.png" alt="" class="img-fluid" />
+            <img src="\assets\img\contact.png" alt="" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -523,7 +519,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (12).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -533,7 +529,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (9).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -544,7 +540,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (7).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -556,7 +552,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (11).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -566,7 +562,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (10).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -577,7 +573,7 @@
           <div class="col-md-4 mt-3 text-center py-3">
             <div class="testing text-center pt-md-3">
               <img
-                src="\assets\icons\Vector (8).png"
+                src="\assets\icons\Vector.png"
                 alt=""
                 class="img-fluid my-4 image-size"
               />
@@ -593,7 +589,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4">
             <img
-              src="\assets\icons\Vector (12).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
@@ -603,7 +599,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4">
             <img
-              src="\assets\icons\Vector (9).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
@@ -615,7 +611,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4">
             <img
-              src="\assets\icons\Vector (7).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
@@ -625,7 +621,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4 pt-md-2">
             <img
-              src="\assets\icons\Vector (11).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
@@ -637,7 +633,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4">
             <img
-              src="\assets\icons\Vector (10).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
@@ -648,7 +644,7 @@
         <div class="col-6 mt-3 text-center py-3">
           <div class="testing text-center pt-4">
             <img
-              src="\assets\icons\Vector (8).png"
+              src="\assets\icons\Vector.png"
               alt=""
               class="img-fluid my-2 image-size"
             />
