--- a/documentation/index.html
+++ b/documentation/index.html
@@ -155,7 +155,7 @@
     </div>
     <div id="documenter_content">
       <section id="documenter_cover">
-        <h1>High Homes.</h1>
+        <h1>Envato Landing Page.</h1>
         <h2>Responsive HTML5 Template and Bootstrap 4</h2>
         <div id="documenter_buttons"></div>
         <hr />
